[gd_scene load_steps=17 format=3 uid="uid://b7j268eje2u0m"]

[ext_resource type="Script" uid="uid://cuqybitx7i2cl" path="res://levels/end_level.gd" id="1_0dpdw"]
[ext_resource type="PackedScene" uid="uid://bcyxpx70wedgn" path="res://levels/parallax_background.tscn" id="2_0dpdw"]
[ext_resource type="Texture2D" uid="uid://cycc38fnyq2e8" path="res://assets/startingEndScreen.png" id="2_y8ap5"]
[ext_resource type="PackedScene" uid="uid://bokydwynkrbia" path="res://entities/character/character_controller.tscn" id="4_gkaq1"]
[ext_resource type="Texture2D" uid="uid://bunb77reemrqo" path="res://assets/start_floor.png" id="5_pdi2x"]
[ext_resource type="PackedScene" uid="uid://e2wiilhoekjt" path="res://ui/enter_name.tscn" id="5_rlfl5"]
[ext_resource type="PackedScene" uid="uid://d3m1yw63xmw8i" path="res://ui/leaderboard.tscn" id="7_t7l8x"]
[ext_resource type="FontFile" uid="uid://4te7loletvh6" path="res://assets/font/ThaleahFat.ttf" id="8_gkaq1"]
[ext_resource type="PackedScene" uid="uid://cu0vnnfircuri" path="res://audio/shredder_sfx.tscn" id="9_pdi2x"]
[ext_resource type="PackedScene" uid="uid://6npcm6iuds5r" path="res://audio/chick_sfx.tscn" id="10_cxyej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq6n3"]
size = Vector2(777.001, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0dpdw"]
size = Vector2(46, 181)

[sub_resource type="GDScript" id="GDScript_t7l8x"]
script/source = "extends Camera2D

@export var character: RigidBody2D

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
	#if character:
	#	global_position = character.global_position + Vector2(100.0, -100.0)
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdi2x"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.835294, 0.654902, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxyej"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.835294, 0.235294, 0.415686, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvt2l"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.00784314, 0.0745098, 0.0509804, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="EndLevel" type="Node2D" node_paths=PackedStringArray("leaderboard")]
script = ExtResource("1_0dpdw")
leaderboard = NodePath("Leaderboard")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y8ap5")
region_enabled = true
region_rect = Rect2(0, 400, 640, 400)

[node name="ParallaxBackground" parent="." instance=ExtResource("2_0dpdw")]
transform = Transform2D(0.965926, 0.258819, -0.258819, 0.965926, 0, 0)

[node name="floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(24.5, 193)
shape = SubResource("RectangleShape2D_sq6n3")

[node name="Sprite2D2" type="Sprite2D" parent="floor"]
position = Vector2(365.5, 233)
scale = Vector2(1.066, 1)
texture = ExtResource("5_pdi2x")

[node name="Sprite2D" type="Sprite2D" parent="floor"]
position = Vector2(-111, 233)
texture = ExtResource("5_pdi2x")

[node name="wall_left" type="StaticBody2D" parent="."]
position = Vector2(-137, -263)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_left"]
position = Vector2(57.5004, 193)
shape = SubResource("RectangleShape2D_sq6n3")

[node name="Sprite2D2" type="Sprite2D" parent="wall_left"]
position = Vector2(365.5, 233)
scale = Vector2(1.066, 1)
texture = ExtResource("5_pdi2x")

[node name="Sprite2D" type="Sprite2D" parent="wall_left"]
position = Vector2(-111, 233)
texture = ExtResource("5_pdi2x")

[node name="wall_right" type="StaticBody2D" parent="."]
position = Vector2(137, 66)
rotation = 4.71239

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall_right"]
position = Vector2(24.5, 193)
shape = SubResource("RectangleShape2D_sq6n3")

[node name="Sprite2D2" type="Sprite2D" parent="wall_right"]
position = Vector2(365.5, 233)
scale = Vector2(1.066, 1)
texture = ExtResource("5_pdi2x")

[node name="Sprite2D" type="Sprite2D" parent="wall_right"]
position = Vector2(-111, 233)
texture = ExtResource("5_pdi2x")

[node name="CharacterControllerBody" parent="." instance=ExtResource("4_gkaq1")]
position = Vector2(-295, 155)

[node name="death_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_area"]
position = Vector2(-32, 92)
shape = SubResource("RectangleShape2D_0dpdw")

[node name="EnterName" parent="." instance=ExtResource("5_rlfl5")]
visible = false
position = Vector2(-104, -47)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("character")]
zoom = Vector2(1.8, 1.8)
script = SubResource("GDScript_t7l8x")
character = NodePath("../CharacterControllerBody")

[node name="Leaderboard" parent="." instance=ExtResource("7_t7l8x")]
visible = false
offset_left = -440.0
offset_top = -263.0
offset_right = -440.0
offset_bottom = -263.0
scale = Vector2(0.67, 0.67)

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = -56.0
offset_top = 90.0
offset_right = 55.0
offset_bottom = 128.0
theme_override_colors/font_outline_color = Color(0.00784314, 0.0745098, 0.0509804, 1)
theme_override_colors/font_color = Color(0.235294, 0.835294, 0.654902, 1)
theme_override_constants/outline_size = 4
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("8_gkaq1")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_pdi2x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cxyej")
theme_override_styles/normal = SubResource("StyleBoxFlat_xvt2l")
text = "restart"

[node name="Shredder_SFX" parent="." instance=ExtResource("9_pdi2x")]

[node name="farm" type="Node" parent="."]

[node name="AudioStreamPlayer2D" parent="farm" instance=ExtResource("10_cxyej")]
volume_db = 1.5
farm_mode = true
frequency = 2.0

[node name="AudioStreamPlayer2D2" parent="farm" instance=ExtResource("10_cxyej")]
volume_db = 2.0
farm_mode = true
frequency = 5.0

[connection signal="body_entered" from="death_area" to="." method="_on_death_area_body_entered"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
